--- a/Rest2.html
+++ b/Rest2.html
@@ -6,7 +6,7 @@
 
 <body>
         <h1 class="title">The Restaurant</h1>
-        <a href="index.html"></a>
+        <a href="index.html">Home</a>
         <hr>
         <h1 id="thankYou"></h1>
         <div id="container">
