--- a/index.html
+++ b/index.html
@@ -6,28 +6,28 @@
 </head>
 
 <body>
-<button id="checkOut" onclick="checkout()">Check Out</button>
+    <button id="checkOut" onclick="checkout()">Check Out</button>
     <h1 class="title" id="title">The Restaurant</h1>
-     <button id="order">Order</button>
-    <hr> 
-  
-    <h1 id="bottom">Welcome!</h1> 
+    <button id="order">Order</button>
+    <hr>
+
+    <h1 id="bottom">Welcome!</h1>
     <div id="left1">
         <h2 id="mapo"></h2>
         <div id="pic1">
-          <select id="user1" >
-               <option value="1">1</option>
-               <option value="2">2</option>
-               <option value="3">3</option>
-           </select>
-          
+            <select id="user1" class="choose">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+            </select>
+
         </div>
     </div>
 
     <div id="right1">
         <h2 id="wonton"></h2>
         <div id="pic2">
-            <select id="user2">
+            <select id="user2" class="choose">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -38,7 +38,7 @@
     <div id="left2">
         <h2 id="friedrice"></h2>
         <div id="pic3">
-            <select id="user3">
+            <select id="user3" class="choose">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -51,7 +51,7 @@
     <div id="right2">
         <h2 id="hainam"></h2>
         <div id="pic4">
-            <select id="user4">
+            <select id="user4" class="choose">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -62,9 +62,9 @@
     </div>
     <div id="left3">
         <h2 id="fishball"></h2>
-       
+
         <div id="pic5">
-            <select id="user5">
+            <select id="user5" class="choose">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -75,7 +75,7 @@
     <div id="right3">
         <h2 id="pho"></h2>
         <div id="pic6">
-            <select id="user6">
+            <select id="user6" class="choose">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
