--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <h2 id="hainam"></h2>
         <div id="pic4">
             <select id="user4" class="choose">
+                <option value="0" selected>0</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
