--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <button id="checkOut" onclick="checkout()">Check Out</button>
+    <button id="checkOut">Check Out</button>
     <h1 class="title" id="title">The Restaurant</h1>
     <button id="order">Order</button>
     <hr>
@@ -17,6 +17,7 @@
         <h2 id="mapo"></h2>
         <div id="pic1">
             <select id="user1" class="choose">
+                    <option value="0" selected disabled>0</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -29,6 +30,7 @@
         <h2 id="wonton"></h2>
         <div id="pic2">
             <select id="user2" class="choose">
+                    <option value="0" selected disabled>0</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -40,6 +42,7 @@
         <h2 id="friedrice"></h2>
         <div id="pic3">
             <select id="user3" class="choose">
+                    <option value="0" selected disabled>0</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -53,7 +56,7 @@
         <h2 id="hainam"></h2>
         <div id="pic4">
             <select id="user4" class="choose">
-                <option value="0" selected>0</option>
+                <option value="0" selected disabled>0</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -67,6 +70,7 @@
 
         <div id="pic5">
             <select id="user5" class="choose">
+                    <option value="0" selected disabled>0</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -78,6 +82,7 @@
         <h2 id="pho"></h2>
         <div id="pic6">
             <select id="user6" class="choose">
+                    <option value="0" selected disabled>0</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
