--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+          <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="p5.min.js"></script>
 <script src="p5.geolocation.js"></script>
   
@@ -36,5 +37,6 @@ function outsideTheFence(position){
     document.body.style.backgroundColor = "red";
 }
     </script>
+      <script src="javaRest.js"></script>
     </body>
     </html>
