--- a/index.html
+++ b/index.html
@@ -32,11 +32,8 @@ p, h1, h2{
    <div id="prompt">
        <h1 id="title">Instructions</h1>
         <h2 id="objective">Kill All Your Enemies</h2>
-       <p>Spacebar =>  jump</p>
-       <p>Enter => attack</p>
-       <p>Left-arrow => move left</p>
-       <p>Right-arrow => move right</p>
-       <p id="start">Press Enter to play</p>
+       <p>Press to jump</p>
+       <p id="start">Press screen to play</p>
    </div> 
    <script>
       
