--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 
 <head>
   <script src="p5.min.js"></script>
-  <script src="p5.collide2D-master/p5.collide2d.min.js"></script>
+  <script src="p5.collide2d.min.js"></script>
   <script src="p5.sound.min.js"></script>
   <script src="jumper.js"></script>
   <script src="barrier.js"></script>
